fix: adjusted callout checkbox spacing

--- a/theme.css
+++ b/theme.css
@@ -5,7 +5,7 @@ Created by Daniel (@danielkhmara) | https://github.com/danielkhmara/obsidian-lum
 
 ---------------------------------------------------------------------------------------
 
-Lumines Obsidian Version: 1.1.0-alpha.34
+Lumines Obsidian Version: 1.1.0-alpha.35
 Support Obsidian Version: 1.0.0+
 
 ---------------------------------------------------------------------------------------
@@ -2070,7 +2070,7 @@ ul.dataview-ul {
 }
 
 .callout-content ul li {
-   margin-inline-start: 1.5em;
+   margin-inline-start: 1.7em;
 }
 
 .callout[data-callout="note"] .callout-icon > svg,
